# kdpeak

./: .coverage  .gitignore  CITATION.cff  Makefile  README.md  Readme.md  codecov.yml  pyproject.toml  pytest.ini  setup.py  tox.ini  util.py
.github/workflows/: tests.yml
kdpeak/: __init__.py  bwops.py  core.py  util.py
tests/: README.md  conftest.py
tests/cli/: test_command_line.py  test_error_handling_cli.py
tests/data/: test_chrom_sizes.txt  test_multi_column.bed  test_small.bed
tests/integration/: test_kdpeak_workflow.py
tests/performance/: test_large_datasets.py
tests/unit/: test_bwops.py  test_bwops_performance.py  test_error_handling.py  test_util.py
