[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kdpeak"
version = "0.2.0"
authors = [
    {name = "Dominik Otto", email = "dotto@fredhutch.org"},
]
description = "A tool to identify genomic peaks based on kernel density estimation."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "GPL-3.0-only"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "KDEpy>=1.0.6",
    "pyBigWig>=0.3.22",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]
keywords = ["genomics", "bioinformatics", "peak-calling", "kernel-density-estimation", "bigwig"]

[project.urls]
Homepage = "https://github.com/settylab/kdpeak"
Repository = "https://github.com/settylab/kdpeak"
"Bug Tracker" = "https://github.com/settylab/kdpeak/issues"

[project.scripts]
kdpeak = "kdpeak.core:main"
bwops = "kdpeak.bwops:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["kdpeak*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
kdpeak = ["*.md"]