[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kdpeak"
version = "0.3.0"
authors = [
    {name = "Dominik Otto", email = "dotto@fredhutch.org"},
]
description = "A tool to identify genomic peaks based on kernel density estimation."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "GPL-3.0-only"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "KDEpy>=1.0.6",
    "pyBigWig>=0.3.22",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-xdist>=2.0",
    "psutil>=5.0",
    "flake8>=3.8",
    "black>=21.0",
    "isort>=5.0",
    "tox>=3.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0", 
    "psutil>=5.0",
]
keywords = ["genomics", "bioinformatics", "peak-calling", "kernel-density-estimation", "bigwig"]

[project.urls]
Homepage = "https://github.com/settylab/kdpeak"
Repository = "https://github.com/settylab/kdpeak"
"Bug Tracker" = "https://github.com/settylab/kdpeak/issues"

[project.scripts]
kdpeak = "kdpeak.core:main"
bwops = "kdpeak.bwops:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["kdpeak*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
kdpeak = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short", 
    "--strict-markers",
    "--strict-config",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests", 
    "cli: marks tests as command-line interface tests",
    "performance: marks tests as performance tests",
    "bigwig: marks tests that require BigWig files"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["kdpeak"]